# chip8rs

./: .gitignore  Cargo.toml  LICENSE  README.md  compat.md
.github/workflows/: ci.yml  rust.yml
src/: chip8.rs  emusdl2.rs  lib.rs  main.rs
