[package]
authors = ["Fredrik Andersson <krueger71@users.noreply.github.com>"]
description = "Chip8 Emulator"
edition = "2021"
license = "ISC"
name = "chip8rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "*", features = ["derive"]}
rand = "*"
sdl2 = "*"
