[package]
authors = ["Fredrik Andersson <krueger71@users.noreply.github.com>"]
description = "Chip8 Emulator"
edition = "2021"
license = "MIT"
name = "chip8rs"
version = "0.2.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "*", features = ["derive"]}
clap-num = "*"
rand = "*"
sdl2 = "*"
